# cpc-daemon

./: .gitignore  CMakeLists.txt  Dockerfile  FindMbedTLS.cmake  GetGitRevisionDescription.cmake  LICENSE  cmake-variants.yaml  compile.sh  cpcd.conf  default.nix  libcpc.pc.in  main.c  package.nix  readme.md  rpi.cmake  sonar-project.properties
.github/workflows/: build-debian-packages.yaml
cmake/: TargetStds.cmake  Warnings.cmake
cmake/modules/: FindMbedTLS.cmake
debian/: changelog  control  cpcd.install  rules
doc/: configuration.md  debug.md  firmware_upgrade.md  gpio.md  iostream_bridge.md  libcpc.md  overview.md  python.md  rust.md  sdio.md  security.md  spi.md  troubleshooting.md  uart.md
driver/: driver_emul.c  driver_emul.h  driver_ezsp.c  driver_ezsp.h  driver_kill.c  driver_kill.h  driver_sdio.c  driver_sdio.h  driver_socket.c  driver_socket.h  driver_spi.c  driver_spi.h  driver_uart.c  driver_uart.h  driver_xmodem.c  driver_xmodem.h
driver/netlink/: nl_sdio_interface.c  nl_sdio_interface.h  nl_socket.c  nl_socket.h
include/cpcd/: board_controller.h  config.h  core.h  endianness.h  event.h  exchange.h  exit.h  gpio.h  logging.h  modes.h  security.h  server_core.h  sl_slist.h  sleep.h  utils.h  xmodem.h
interface/: cpc_interface.h
lib/: sl_cpc.c  sl_cpc.h
lib/bindings/python/: LICENSE  README.md  pyproject.toml
lib/bindings/python/src/libcpc/: __init__.py  libcpc.py
lib/bindings/rust/: Cargo.toml  README.md  README.txt  blackbox.nix  build.rs
lib/bindings/rust/libcpc/: Cargo.toml  README.md
lib/bindings/rust/libcpc-sys/: Cargo.toml  build.rs
lib/bindings/rust/libcpc/examples/: sample_app.rs
lib/bindings/rust/libcpc/src/: lib.rs
lib/bindings/rust/sample_app/: Cargo.toml  README.md  build.rs
lib/bindings/rust/sample_app/src/: main.rs
lib/bindings/rust/src/: libcpc.rs
lib/bindings/rust/tests/: blackbox.rs
lib/bindings/rust/tests/common/: mod.rs
misc/: board_controller.c  board_controller.h  config.c  config.h  config.h.in  endianess.h  errno_codename.c  errno_codename.h  exit.c  gpio.c  gpio.h  gpio_gpiod.c  gpio_sysfs.c  log.h  logging.c  logging.h  sl_enum.h  sl_slist.c  sl_slist.h  sl_status.h  sl_string.c  sl_string.h  sleep.c  sleep.h  utils.c  utils.h  version.h.in  xmodem.h
misc/gpio/: gpio.c  gpio.h
misc/tracing/: tracing.c  tracing.h
modes/: binding.c  binding.h  firmware_update.c  firmware_update.h  normal.c  normal.h  uart_validation.c  uart_validation.h
script/: README.md  cpc_interactive_client.py  cpc_iostream_bridge.py  cpc_perf_app.py  libcpc_wrapper.py  lttng-install.txt  lttng-trace.sh
security/: security.c  security.h
security/private/keys/: keys.c  keys.h
security/private/protocol/: protocol.c  protocol.h
security/private/thread/: command_synchronizer.c  command_synchronizer.h  security_thread.c  security_thread.h
server_core/: cpcd_event.h  cpcd_exchange.h  server_core.c  server_core.h
server_core/core/: buffer.c  buffer.h  core.c  core.h  crc.c  crc.h  hdlc.c  hdlc.h  protocol.c  protocol.h  protocol_internal.h  protocol_v4.c  protocol_v5.c
server_core/epoll/: epoll.c  epoll.h
server_core/server/: server.c  server.h  server_internal.h  server_ready_sync.c  server_ready_sync.h  system_callbacks.c  system_callbacks.h
server_core/server/system/: system.c  system.h  system_common.h
server_core/system_endpoint/: system.c  system.h  system_callbacks.c  system_callbacks.h
